--- a/cf-template.yml
+++ b/cf-template.yml
@@ -115,7 +115,15 @@ Resources:
         - IpProtocol: tcp
           FromPort: '22'
           ToPort: '22'
-          CidrIp: 0.0.0.0/0  
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: '0'
+          ToPort: '65535'
+          CidrIp: 10.0.0.0/16
+        - IpProtocol: icmp
+          FromPort: '-1'
+          ToPort: '-1'
+          CidrIp: 10.0.0.0/16
       VpcId: !Ref VPC
 
   EC2InstanceMaster:
